--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "migrate": "node scripts/runMigrations.js",
-    "migrate:info": "node -e \"console.log('Migrate runner will execute SQL files from backend/migrations using the DB settings in backend/config/db.js')\""
+    "migrate:cloud": "node scripts/runCloudMigrations.js",
+    "migrate:info": "node -e \"console.log('Cloud migration: Run npm run migrate:cloud to execute SQL files from backend/migrations using DB settings in backend/config/db.js')\""
   },
   "keywords": [],
   "author": "",
