--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+  "nodemailer": "^6.9.3",
+  "ioredis": "^5.3.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
